# the-air-quality-project-airflow-dags

./: .gitignore  energy_data_dag.py  example_dag.py  forward-postgres.sh  get_postgres_credentials.sh  pyproject.toml  test-connect.sh
dags/: create_and_update_energy_db.py  create_and_update_openaq_db.py  energy_data_dag.py  openaq.py
