[project]
name = "airflow-dags"
version = "0.1.0"
description = "Airflow dags for the air quality project"
authors = [
    {name = "waddafunk",email = "jacopo.piccirillo@gmail.com"}
]
license = {text = "apache"}
readme = "README.md"
requires-python = "3.12.9"
dependencies = [
    "apache-airflow[cncf-kubernetes] (>=2.10.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "azure-storage-file-datalake (>=12.18.1,<13.0.0)",
    "azure-identity (>=1.20.0,<2.0.0)",
    "virtualenv (>=20.29.2,<21.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "centralized-rate-limiter (>=0.2.2,<0.3.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "apache-airflow-providers-postgres (>=6.1.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.9"
pyupgrade = "^3.19.1"
pytest-cov = "^6.0.0"
nbqa = "^1.9.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
